--- a/Prac06/miles_to_km.kv
+++ b/Prac06/miles_to_km.kv
@@ -1,3 +1,30 @@
+<Widget>:
+    canvas.before:
+        Color:
+            rgba: 1, 1, 1, 1
+        Rectangle:
+            pos: self.pos
+            size: self.size
+    color: 0, 0, 0, 1
+
+<Button>:
+    font_size: 56
+    background_normal: ""
+    canvas.after:
+        Color:
+            rgba: 0, 0, 0, 1
+        Line:
+            rectangle: self.x + 1, self.y + 1, self.width - 1, self.height - 1
+
+<TextInput>
+    canvas.before:
+        Color:
+            rgba: 0, 0, 0, 1
+        Line:
+            rectangle: self.x + 1, self.y + 1, self.width - 1, self.height - 1
+
+
+
 BoxLayout:
     orientation: "vertical"
     BoxLayout:
@@ -28,6 +55,5 @@ BoxLayout:
     Label:
         id: calculation
         text: ""
-        color: (1, 1, 0, 1)
         font_size: 35
 
